# Article-to-Linkedin-Post-Generator

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  health_check.py  pyproject.toml  railway.toml  requirements.txt
src/: article_fetcher.py  post_generator.py  prompts.py  user_config.py
