[project]
name = "article-to-linkedin-post-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Akhilesh Malthi",email = "akhileshmalthi2299@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "python-dotenv",
    "newsapi-python",
    "langchain",
    "langchain-groq"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"