[project]
name = "article-to-linkedin-post-generator"
version = "0.1.0"
description = "Generate LinkedIn posts from articles"
authors = [
    {name = "Akhilesh Malthi", email = "akhileshmalthi2299@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "python-dotenv",
    "newsapi-python",
    "langchain",
    "langchain-groq"
]

# Poetry configuration for dependency management
[tool.poetry]
name = "article-to-linkedin-post-generator"
version = "0.1.0"
description = "Generate LinkedIn posts from articles"
authors = ["Akhilesh Malthi <akhileshmalthi2299@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# Dependencies managed in [project.dependencies] above

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
ruff = "^0.1.0"